// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Primary Pill renders correctly 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <div
    className="sc-bdVaJa lgVSbN"
  >
    <div
      className="sc-VigVT dzpHnm sc-gZMcBi huovEK sc-htoDjs jslKMR sc-gzVnrw jCPitn"
    >
      pill
    </div>
  </div>
</div>
`;

exports[`Small Danger Pill renders correctly 1`] = `
<div
  className="StyledGrommet-sc-19lkkz7-0 bBubtL"
>
  <div
    className="sc-bdVaJa lgVSbN"
  >
    <div
      className="sc-gZMcBi sc-VigVT dzpHnm sc-gqjmRU kFKahL sc-htoDjs jslKMR sc-gzVnrw jCPitn"
    >
      pill
    </div>
  </div>
</div>
`;
